Don't forget to add a ``spotless'' clean rule, or to remove @CONFIGURE_FILES@

--- a/Makefile.in
+++ b/Makefile.in
@@ -8,8 +8,8 @@ secho: secho.c cstring.h config.h
 clean:
 	rm -f secho secho.o
 
-spotless: clean
-	rm -f @GENERATED_FILES@
+distclean spotless: clean
+	rm -f @GENERATED_FILES@ @CONFIGURE_FILES@
 
 install: secho
 	@INSTALL_PROGRAM@ secho $(bindir)
