1. Add long options for the full modern Unix experience. 2. Add in the (mysteriously left out) -s option, and    move the option setting for -t over to the -t option.

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,8 +2,8 @@ CC=@CC@
 bindir=@exedir@
 mandir=@mandir@
 
-secho: secho.c cstring.h config.h
-	$(CC) -o secho secho.c
+secho: secho.c cstring.h config.h @XGETOPT@
+	$(CC) -o secho secho.c @XGETOPT@
 
 clean:
 	rm -f secho secho.o
