--- a/Makefile.in
+++ b/Makefile.in
@@ -2,8 +2,8 @@ CC=@CC@
 bindir=@exedir@
 mandir=@mandir@
 
-secho: secho.c cstring.h config.h @XGETOPT@
-	$(CC) -o secho secho.c @XGETOPT@
+secho: secho.c cstring.h config.h version.c copyright.c @XGETOPT@
+	$(CC) -o secho secho.c version.c copyright.c @XGETOPT@
 
 clean:
 	rm -f secho secho.o
@@ -15,3 +15,12 @@ install: secho
 	@INSTALL_PROGRAM@ secho $(bindir)
 	@INSTALL_DIR@ $(mandir)/man1
 	@INSTALL_DATA@ secho.1 $(mandir)/man1
+
+
+version.c: VERSION config.h
+	echo 'char version[]="'`cat VERSION`'";' > version.c
+
+copyright.c: COPYRIGHT config.h
+	echo 'char copyright[]=' > copyright.c
+	sed -e 's/"/\\"/g' -e 's/^.*$$/"&\\n"/' < COPYRIGHT >> copyright.c
+	echo ';' >> copyright.c
